--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,236 @@
-audio_recorder_streamlit
-openai
-audio_recorder_streamlit
-streamlit-float
-streamlit
-pdfplumber
-opencv-python
-Pillow
-numpy
-pytesseract
-transformers
-Pillow
-ipykernel
-python-dotenv
-langchain==0.0.350
-pytube
-streamlit==1.29.0
-youtube_transcript_api==0.6.1
-openai
-langchain-community
-langchain
-PyPDF2
+absl-py==1.2.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+altair==4.2.2
+annotated-types==0.7.0
+anyio==4.6.2.post1
+arabic-reshaper==3.0.0
+asgiref==3.7.2
+asn1crypto==1.5.1
+asttokens==3.0.0
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==24.2.0
+audio-recorder-streamlit==0.0.10
+blinker==1.8.2
+cachetools==5.5.0
+cattrs==1.5.0
+certifi==2024.7.4
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==2.1.0
+colorama==0.4.6
+comm==0.2.2
+comtypes==1.4.7
+cryptography==43.0.3
+cssselect2==0.7.0
+dataclasses-json==0.6.7
+debugpy==1.8.12
+decorator==5.1.1
+decouple==0.0.7
+distlib==0.3.9
+distro==1.9.0
+Django==4.2.4
+django-crispy-forms==2.3
+django-model-utils==5.0.0
+django-paypal==2.1
+django-quiz-app==0.5.1
+django-widget-tweaks==1.5.0
+entrypoints==0.4
+exceptiongroup==1.2.2
+executing==2.1.0
+filelock==3.16.1
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.12.0
+gast==0.6.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-ai-generativelanguage==0.6.10
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==0.4.6
+google-generativeai==0.8.3
+google-pasta==0.2.0
+googleapis-common-protos==1.65.0
+greenlet==3.1.1
+groq==0.11.0
+grpcio==1.67.0
+grpcio-status==1.67.0
+gTTS==2.5.3
+gunicorn==22.0.0
+gym==0.25.0
+gym-notices==0.0.7
+h11==0.14.0
+h5py==3.12.1
+html5lib==1.1
+httpcore==1.0.6
+httplib2==0.22.0
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.27.1
+idna==3.7
+importlib-metadata==4.12.0
+ipykernel==6.29.5
+ipython==8.18.1
+jedi==0.19.2
+Jinja2==3.1.4
+jiter==0.6.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keras==3.6.0
+langchain==0.3.15
+langchain-community==0.3.15
+langchain-core==0.3.31
+langchain-openai==0.2.2
+langchain-text-splitters==0.3.5
+langsmith==0.3.0
+libclang==18.1.1
+llvmlite==0.43.0
+lxml==5.3.0
+Markdown==3.4.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.1
+marshmallow==3.22.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.4.1
+mlagents==0.29.0
+mlagents-envs==0.29.0
+more-itertools==10.5.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+namex==0.0.8
+narwhals==1.9.3
+nest-asyncio==1.6.0
+nltk==3.9.1
+numba==0.60.0
+numpy==1.26.4
+oauthlib==3.2.0
+openai==1.51.2
+openai-whisper==20240930
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
+optree==0.13.0
+orjson==3.10.7
+oscrypto==1.3.0
+packaging==23.2
+pandas==2.2.3
+parso==0.8.4
+pdfminer.six==20231228
+pdfplumber==0.11.5
+PettingZoo==1.19.0
+Pillow==10.0.0
+platformdirs==4.3.6
+playsound==1.3.0
+pluggy==1.5.0
+prompt_toolkit==3.0.50
+propcache==0.2.0
+proto-plus==1.24.0
+protobuf==4.25.5
+psutil==6.1.1
+psycopg2==2.9.9
+pure_eval==0.2.3
+pyarrow==17.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.22
+pydantic==2.9.2
+pydantic-settings==2.5.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.18.0
+pyHanko==0.25.1
+pyhanko-certvalidator==0.26.3
+PyMuPDF==1.24.11
+pyparsing==3.2.0
+pypdf==5.0.1
+PyPDF2==3.0.1
+pypdfium2==4.30.1
+pypiwin32==223
+pyproject-api==1.8.0
+pytesseract==0.3.13
+python-bidi==0.6.3
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-docx==1.1.2
+python-dotenv==1.0.1
+pyttsx3==2.98
+pytube==15.0.0
+pytz==2024.1
+pywin32==304
+PyYAML==6.0
+pyzmq==26.2.0
+qrcode==8.0
+referencing==0.35.1
+regex==2024.9.11
+reportlab==4.2.5
+requests==2.32.3
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+rich==13.9.2
+rpds-py==0.20.0
+rsa==4.9
+safetensors==0.5.2
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+sqlparse==0.4.4
+stack-data==0.6.3
+streamlit==1.41.1
+streamlit-float==0.3.5
+svglib==1.5.1
+tenacity==8.5.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.5.0
+tiktoken==0.8.0
+tinycss2==1.3.0
+tokenizers==0.21.0
+toml==0.10.2
+tomli==2.0.2
+toolz==1.0.0
+torch==1.8.2+cpu
+torchaudio==0.8.2
+torchvision==0.9.2+cpu
+tornado==6.4.1
+tox==4.23.0
+tqdm==4.66.5
+traitlets==5.14.3
+transformers==4.48.1
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2023.3
+tzlocal==5.2
+uritemplate==4.1.1
+uritools==4.0.3
+urllib3==2.2.2
+validators==0.34.0
+virtualenv==20.27.0
+watchdog==5.0.3
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==2.1.2
+whitenoise==6.6.0
+wrapt==1.16.0
+xhtml2pdf==0.2.16
+yarl==1.15.4
+youtube-transcript-api==0.6.1
+zipp==3.8.1
+zstandard==0.23.0
