--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
+audio_recorder_streamlit
+openai
+audio_recorder_streamlit
+streamlit-float
+streamlit
+pdfplumber
+opencv-python
+Pillow
+numpy
+pytesseract
+transformers
+Pillow
+ipykernel
+python-dotenv
+langchain==0.0.350
+pytube
+streamlit==1.29.0
+youtube_transcript_api==0.6.1
+openai
+langchain-community
+langchain
+
 absl-py==1.2.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
